--- a/farmer-dashboard.html
+++ b/farmer-dashboard.html
@@ -1,286 +1,141 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Farmer Dashboard • Milqly</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="min-h-screen bg-gradient-to-b from-green-50 to-blue-50">
-
-  <!-- Top nav -->
-  <header class="bg-white shadow sticky top-0 z-50">
-    <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
-      <div class="flex items-center gap-3">
-        <div class="w-10 h-10 rounded-lg bg-green-100 flex items-center justify-center text-green-600 font-bold">🥛</div>
-        <div>
-          <h1 class="font-bold text-lg text-green-700">Milqly • Farmer Dashboard</h1>
-          <p class="text-sm text-gray-500">Manage your assigned subscriptions & update delivery status</p>
-        </div>
-      </div>
-      <div class="flex items-center gap-3">
-        <div id="earningsCard" class="text-right">
-          <div class="text-xs text-gray-500">Earnings (delivered)</div>
-          <div id="earnings" class="font-semibold text-green-600 text-lg">₹0</div>
-        </div>
-        <button id="logoutBtn" class="bg-red-500 hover:bg-red-600 text-white px-3 py-2 rounded-lg">Logout</button>
-      </div>
-    </div>
-  </header>
-
-  <!-- Content -->
-  <main class="max-w-6xl mx-auto p-4 space-y-6">
-    <!-- Profile Card -->
-    <section class="bg-white rounded-2xl shadow p-5 flex flex-col md:flex-row md:justify-between md:items-center">
-      <div>
-        <h2 id="farmerName" class="text-xl font-semibold text-gray-800">Loading...</h2>
-        <p id="farmerEmail" class="text-sm text-gray-500">—</p>
-        <p id="farmerLocation" class="text-sm text-gray-500 mt-1">—</p>
-      </div>
-      <div class="mt-4 md:mt-0">
-        <span class="inline-block bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm font-medium" id="approvalBadge">Status: —</span>
-      </div>
-    </section>
-
-    <!-- Assigned subscriptions -->
-    <section>
-      <h3 class="text-lg font-semibold text-gray-800 mb-3">Assigned Subscriptions</h3>
-      <div id="assignedList" class="space-y-4">
-        <!-- cards inserted here -->
-      </div>
-
-      <div id="noAssigned" class="text-gray-500 mt-4">Loading assigned subscriptions…</div>
-    </section>
-
-    <!-- Instructions -->
-    <section class="bg-white p-4 rounded-lg shadow text-sm text-gray-600">
-      <strong>Process notes:</strong>
-      <ul class="list-disc ml-5 mt-2">
-        <li>After Admin assigns a subscription it appears here as <em>Assigned</em>.</li>
-        <li>Click <strong>Approve</strong> to accept the assignment (moves to <em>Approved</em>).</li>
-        <li>Then mark <strong>Processed</strong> and finally <strong>Delivered</strong>. Users & Admin see updates live.</li>
-      </ul>
-    </section>
-  </main>
-
-  <!-- Firebase -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
-    import {
-      getFirestore, collection, query, where, onSnapshot, doc, updateDoc, getDoc, serverTimestamp
-    } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
-
-    // ===== your firebase config =====
-    const firebaseConfig = {
-      apiKey: "AIzaSyCayl1Hkzf7krOjqlxqWEbBpNZC8m41BBk",
-      authDomain: "milqly.firebaseapp.com",
-      projectId: "milqly",
-      storageBucket: "milqly.firebasestorage.app",
-      messagingSenderId: "509357207390",
-      appId: "1:509357207390:web:47a4c7bc0af3373cd0a9cf",
-      measurementId: "G-Z576VSVC5J"
-    };
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
-
-    // UI refs
-    const farmerNameEl = document.getElementById("farmerName");
-    const farmerEmailEl = document.getElementById("farmerEmail");
-    const farmerLocationEl = document.getElementById("farmerLocation");
-    const approvalBadge = document.getElementById("approvalBadge");
-    const assignedList = document.getElementById("assignedList");
-    const noAssigned = document.getElementById("noAssigned");
-    const earningsEl = document.getElementById("earnings");
-    const logoutBtn = document.getElementById("logoutBtn");
-
-    logoutBtn.onclick = async () => {
-      await signOut(auth);
-      window.location.href = "farmer-login.html";
-    };
-
-    // Keep reference to snapshot unsub
-    let subsUnsub = null;
-
-    // Utility: status badge style
-    function statusBadge(status){
-      const base = "inline-block px-3 py-1 rounded-full text-xs font-semibold";
-      switch((status||"").toLowerCase()){
-        case "assigned": return `${base} bg-blue-100 text-blue-700`;
-        case "approved": return `${base} bg-yellow-100 text-yellow-800`;
-        case "processed": return `${base} bg-indigo-100 text-indigo-800`;
-        case "delivered": return `${base} bg-green-100 text-green-800`;
-        default: return `${base} bg-gray-100 text-gray-700`;
-      }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Farmer Dashboard</title>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background: linear-gradient(135deg, #84fab0, #8fd3f4);
+      margin: 0;
+      padding: 0;
     }
+    .dashboard {
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 15px;
+      box-shadow: 0px 4px 15px rgba(0,0,0,0.2);
+    }
+    h1 {
+      text-align: center;
+      background: linear-gradient(90deg, #2196f3, #21cbf3);
+      color: white;
+      padding: 15px;
+      border-radius: 10px;
+    }
+    h2 {
+      color: #333;
+      margin-top: 25px;
+      border-left: 5px solid #21cbf3;
+      padding-left: 10px;
+    }
+    .card {
+      background: #f8f9fa;
+      margin: 15px 0;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0px 3px 8px rgba(0,0,0,0.1);
+    }
+    .btn {
+      padding: 8px 15px;
+      margin: 5px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    .btn-process { background: #ff9800; color: white; }
+    .btn-deliver { background: #4caf50; color: white; }
+    .btn:hover { opacity: 0.8; }
+  </style>
+</head>
+<body>
+  <div class="dashboard">
+    <h1>Farmer Dashboard</h1>
 
-    // Listen auth state & load farmer data
-    onAuthStateChanged(auth, async (user) => {
-      if (!user) {
-        window.location.href = "farmer-login.html";
-        return;
-      }
+    <h2>Assigned Deliveries</h2>
+    <div id="assignedDeliveries">Loading...</div>
+  </div>
 
-      // fetch farmer doc (support both 'farmers' and 'users' collections)
-      const fRef = doc(db, "farmers", user.uid);
-      const fSnap = await getDoc(fRef);
-      let farmerData = null;
-      if (fSnap.exists()) farmerData = fSnap.data();
-      else {
-        const uRef = doc(db, "users", user.uid);
-        const uSnap = await getDoc(uRef);
-        if (uSnap.exists() && uSnap.data().role === "farmer") farmerData = uSnap.data();
-      }
+  <script>
+    // ✅ Firebase config (replace with your own)
+   const firebaseConfig = {
+  apiKey: "AIzaSyCayl1Hkzf7krOjqlxqWEbBpNZC8m41BBk",
+  authDomain: "milqly.firebaseapp.com",
+  projectId: "milqly",
+  storageBucket: "milqly.firebasestorage.app",
+  messagingSenderId: "509357207390",
+  appId: "1:509357207390:web:47a4c7bc0af3373cd0a9cf",
+  measurementId: "G-Z576VSVC5J"
+};
 
-      // If no farmer record or not approved, redirect
-      if (!farmerData) {
-        alert("No farmer record found. Please register.");
-        await signOut(auth);
-        window.location.href = "farmer-login.html";
-        return;
-      }
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.firestore();
 
-      const approved = (farmerData.approved === true) || (farmerData.status && farmerData.status.toLowerCase() === "approved");
-      farmerNameEl.textContent = farmerData.name || user.displayName || "Farmer";
-      farmerEmailEl.textContent = farmerData.email || user.email || "";
-      farmerLocationEl.textContent = farmerData.location ? `Location: ${farmerData.location}` : "";
-
-      approvalBadge.textContent = approved ? "Approved" : "Pending Approval";
-      approvalBadge.className = approved ? "inline-block bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm font-medium" : "inline-block bg-gray-100 text-gray-700 px-3 py-1 rounded-full text-sm font-medium";
-
-      if (!approved) {
-        alert("Your account is not yet approved by admin. You will be redirected.");
-        await signOut(auth);
-        window.location.href = "farmer-login.html";
-        return;
-      }
-
-      // Setup live listener for subscriptions assigned to this farmer
-      if (subsUnsub) subsUnsub(); // cleanup old
-      const q = query(collection(db, "subscriptions"), where("assignedFarmerId", "==", user.uid));
-      subsUnsub = onSnapshot(q, async (snap) => {
-        assignedList.innerHTML = "";
-        let any = false;
-        let earningsSum = 0;
-
-        for (const docSnap of snap.docs) {
-          const s = docSnap.data();
-          // optionally skip inactive subscriptions (if you used isActive)
-          if (s.isActive === false) continue;
-
-          any = true;
-          // fetch user name if possible
-          let customerName = s.userName || "Customer";
-          if (!s.userName && s.userId) {
-            try {
-              const uSnap = await getDoc(doc(db, "users", s.userId));
-              if (uSnap.exists()) customerName = uSnap.data().name || customerName;
-            } catch(e){
-              /* ignore */
+    // Load farmer's assigned deliveries
+    auth.onAuthStateChanged(user => {
+      if (user) {
+        db.collection("subscriptions")
+          .where("farmerId", "==", user.uid)
+          .onSnapshot(snapshot => {
+            const container = document.getElementById("assignedDeliveries");
+            container.innerHTML = "";
+            if (snapshot.empty) {
+              container.innerHTML = "<p>No deliveries assigned yet.</p>";
+              return;
             }
-          }
+            snapshot.forEach(doc => {
+              const data = doc.data();
+              const div = document.createElement("div");
+              div.classList.add("card");
+              div.innerHTML = `
+                <p><b>User:</b> ${data.userName || "N/A"}</p>
+                <p><b>Subscription:</b> ${data.subscriptionType}</p>
+                <p><b>Status:</b> ${data.status}</p>
+              `;
 
-          // compute estimated earning (if fields exist); otherwise don't show
-          const earning = s.farmerEarning || s.totalAmount || 0;
-          if (s.deliveryStatus && s.deliveryStatus.toLowerCase() === "delivered") earningsSum += (typeof earning === "number" ? earning : 0);
+              if (data.status === "Pending") {
+                const processBtn = document.createElement("button");
+                processBtn.classList.add("btn", "btn-process");
+                processBtn.innerText = "Mark Processed";
+                processBtn.onclick = () => updateStatus(doc.id, "Processed");
+                div.appendChild(processBtn);
+              }
+              if (data.status === "Processed") {
+                const deliverBtn = document.createElement("button");
+                deliverBtn.classList.add("btn", "btn-deliver");
+                deliverBtn.innerText = "Mark Delivered";
+                deliverBtn.onclick = () => updateStatus(doc.id, "Delivered");
+                div.appendChild(deliverBtn);
+              }
 
-          // render card
-          const card = document.createElement("div");
-          card.className = "bg-white rounded-xl shadow p-4 flex flex-col md:flex-row md:justify-between md:items-center";
-          card.innerHTML = `
-            <div class="flex-1">
-              <div class="flex items-center gap-3">
-                <div>
-                  <div class="text-sm text-gray-500">${customerName}</div>
-                  <div class="text-lg font-semibold text-gray-800">${s.planType || s.plan || "Plan"}</div>
-                </div>
-              </div>
-
-              <div class="mt-2 text-sm text-gray-600 space-y-1">
-                <div><strong>Qty:</strong> ${s.quantity || "-"} L/day</div>
-                <div><strong>Start:</strong> ${s.startDate || (s.createdAt ? new Date(s.createdAt.seconds*1000).toLocaleDateString() : "-")}</div>
-                <div><strong>Delivery status:</strong> <span class="ml-2">${statusBadge(s.deliveryStatus)}</span></div>
-                ${earning ? `<div><strong>Estimated earning:</strong> ₹${earning}</div>`: ""}
-              </div>
-            </div>
-
-            <div class="mt-4 md:mt-0 md:ml-6 flex flex-col gap-2">
-              <!-- Buttons created client-side below -->
-            </div>
-          `;
-
-          // add action buttons depending on status
-          const actionsDiv = card.querySelector("div > div:nth-child(2)"); // last div
-          // We'll create buttons programmatically to attach closures with doc id
-          const btnContainer = card.querySelector(".mt-4.md\\:mt-0.md\\:ml-6") || card.lastElementChild;
-
-          // function to create a button
-          function makeBtn(text, classes, onClick) {
-            const b = document.createElement("button");
-            b.textContent = text;
-            b.className = classes + " px-3 py-2 rounded-lg text-sm font-medium";
-            b.addEventListener("click", onClick);
-            return b;
-          }
-
-          const docId = docSnap.id;
-          const ds = (s.deliveryStatus || "Pending").toLowerCase();
-
-          // If Assigned -> show Approve
-          if (ds === "assigned" || ds === "pending") {
-            const approveBtn = makeBtn("Approve", "bg-yellow-500 text-white hover:bg-yellow-600", async () => {
-              await updateDoc(doc(db, "subscriptions", docId), {
-                deliveryStatus: "Approved",
-                farmerApproval: true,
-                updatedAt: serverTimestamp()
-              });
+              container.appendChild(div);
             });
-            btnContainer.appendChild(approveBtn);
-          }
-
-          // If Approved -> allow Processed
-          if (ds === "approved") {
-            const processBtn = makeBtn("Mark Processed", "bg-indigo-600 text-white hover:bg-indigo-700", async () => {
-              await updateDoc(doc(db, "subscriptions", docId), {
-                deliveryStatus: "Processed",
-                updatedAt: serverTimestamp()
-              });
-            });
-            btnContainer.appendChild(processBtn);
-          }
-
-          // If Processed -> allow Delivered
-          if (ds === "processed") {
-            const deliveredBtn = makeBtn("Mark Delivered", "bg-green-600 text-white hover:bg-green-700", async () => {
-              await updateDoc(doc(db, "subscriptions", docId), {
-                deliveryStatus: "Delivered",
-                deliveredAt: serverTimestamp()
-              });
-            });
-            btnContainer.appendChild(deliveredBtn);
-          }
-
-          // Always allow a Refresh button
-          const refreshBtn = makeBtn("Refresh", "bg-gray-100 text-gray-700 hover:bg-gray-200", async () => {
-            // simple refresh: do nothing — onSnapshot updates automatically. But we can re-run nothing.
           });
-          btnContainer.appendChild(refreshBtn);
-
-          assignedList.appendChild(card);
-        } // end for
-
-        // show earnings
-        earningsEl.textContent = `₹${earningsSum}`;
-
-        if (!any) {
-          noAssigned.textContent = "No subscriptions are assigned to you yet.";
-          assignedList.innerHTML = "";
-        } else {
-          noAssigned.textContent = "";
-        }
-      });
+      } else {
+        window.location.href = "login.html";
+      }
     });
+
+    function updateStatus(subscriptionId, newStatus) {
+      db.collection("subscriptions").doc(subscriptionId).update({
+        status: newStatus
+      }).then(() => {
+        alert("Status updated to " + newStatus);
+      }).catch(err => {
+        console.error(err);
+        alert("Error updating status.");
+      });
+    }
   </script>
 </body>
 </html>
