--- a/admindash.html
+++ b/admindash.html
@@ -78,15 +78,15 @@
 
   <script>
     // ✅ Your Firebase Config here
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT.appspot.com",
-      messagingSenderId: "SENDER_ID",
-      appId: "APP_ID"
-    };
-
+   const firebaseConfig = {
+  apiKey: "AIzaSyCayl1Hkzf7krOjqlxqWEbBpNZC8m41BBk",
+  authDomain: "milqly.firebaseapp.com",
+  projectId: "milqly",
+  storageBucket: "milqly.firebasestorage.app",
+  messagingSenderId: "509357207390",
+  appId: "1:509357207390:web:47a4c7bc0af3373cd0a9cf",
+  measurementId: "G-Z576VSVC5J"
+};
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
